--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@
 }
 
 body,
-.App {
+.fallout {
 	background: black;
 	color: rgb(var(--main));
 	font-family: "Roboto Mono", monospace;
@@ -83,8 +83,8 @@ strong {
 	border-top-color: #020202;
 	box-shadow: inset 0 0 24rem black, inset 0 0 5rem black, 0 0 16rem black;
 	pointer-events: none;
-	max-width: 900px;
-	height: 550px;
+	max-width: 1025px;
+	height: 675px;
 	width: 96%;
 	max-height: calc(100vh - 20px);
 	margin: 0 auto;
@@ -586,7 +586,8 @@ a:hover,
 
 .info-table li.span-2,
 .info-table .vboy-wrap {
-	width: 65.4%;
+	/* width: 65.4%; */
+	width: 100%;
 	text-align: left;
 }
 
@@ -633,7 +634,7 @@ a:hover,
 	position: relative;
 	padding: 5px 6px;
 	margin: 0 0 0 1.3%;
-	padding-left: 34.6%;
+	padding-left: 24.6%;
 }
 
 .extra b {
