--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
 	box-sizing: border-box;
 	scrollbar-width: thin;
 	scrollbar-color: rgb(var(--alt)) transparent;
+	cursor: none !important;
 }
 
 *::-webkit-scrollbar {
@@ -23,7 +24,45 @@
 :root {
 	--main: 255, 170, 60;
 	--alt: 120, 75, 20;
+
 	--black: #12100d;
+
+	--dark-navy: #020c1b;
+	--navy: #0a192f;
+	--light-navy: #112240;
+	--lightest-navy: #233554;
+	--navy-shadow: rgba(2, 12, 27, 0.7);
+	--dark-slate: #495670;
+	--slate: #8892b0;
+	--light-slate: #a8b2d1;
+	--lightest-slate: #ccd6f6;
+	--white: #e6f1ff;
+	--green: #64ffda;
+	--green-tint: rgba(100, 255, 218, 0.1);
+	--pink: #f57dff;
+	--blue: #57cbff;
+	--font-sans: "Calibre", "Inter", "San Francisco", "SF Pro Text", -apple-system, system-ui, sans-serif;
+	--font-mono: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", monospace;
+	--fz-xxs: 12px;
+	--fz-xs: 13px;
+	--fz-sm: 14px;
+	--fz-md: 16px;
+	--fz-lg: 18px;
+	--fz-xl: 20px;
+	--fz-xxl: 22px;
+	--fz-heading: 32px;
+	--border-radius: 4px;
+	--nav-height: 100px;
+	--nav-scroll-height: 70px;
+	--tab-height: 42px;
+	--tab-width: 120px;
+	--easing: cubic-bezier(0.645, 0.045, 0.355, 1);
+	--transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
+	--hamburger-width: 30px;
+	--ham-before: top 0.1s ease-in 0.25s, opacity 0.1s ease-in;
+	--ham-before-active: top 0.1s ease-out, opacity 0.1s ease-out 0.12s;
+	--ham-after: bottom 0.1s ease-in 0.25s, transform 0.22s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+	--ham-after-active: bottom 0.1s ease-out, transform 0.22s cubic-bezier(0.215, 0.61, 0.355, 1) 0.12s;
 }
 
 ::selection {
@@ -83,8 +122,8 @@ strong {
 	border-top-color: #020202;
 	box-shadow: inset 0 0 24rem black, inset 0 0 5rem black, 0 0 16rem black;
 	pointer-events: none;
-	max-width: 1025px;
-	height: 675px;
+	max-width: 1225px;
+	height: 875px;
 	width: 96%;
 	max-height: calc(100vh - 20px);
 	margin: 0 auto;
@@ -637,13 +676,36 @@ a:hover,
 	padding-left: 24.6%;
 }
 
+.extra-description {
+	border: 2px solid;
+	/* float: left; */
+	clear: both;
+	/* width: 98.7%; */
+	position: relative;
+	padding: 5px 6px;
+	margin: 0 0 0 1.3%;
+	/* padding-left: 24.6%; */
+}
+
+.technologies {
+	border-top: 2px solid;
+	float: left;
+	clear: both;
+	width: 98.7%;
+	position: relative;
+	padding: 5px 6px;
+	margin: 0 0 0 1.3%;
+	/* padding-left: 24.6%; */
+}
+
 .extra b {
 	position: absolute;
 	left: 6px;
 }
 
 .info-table li::after,
-.extra::after {
+.extra::after,
+.technologies::after {
 	content: "";
 	position: absolute;
 	right: 0;
@@ -737,7 +799,7 @@ a:hover,
 .fade-a {
 	animation: fade-swap 8s infinite;
 	animation-delay: -4s;
-	opaicty: 1;
+	opacity: 1;
 }
 
 .fade-b {
