--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,6 @@
 :root {
 	--main: 255, 170, 60;
 	--alt: 120, 75, 20;
-
 	--black: #12100d;
 
 	--dark-navy: #020c1b;
@@ -461,8 +460,8 @@ label {
 	border-radius: 0;
 	display: block;
 	float: left;
-	width: 12%;
-	height: 28px;
+	width: 16%;
+	height: 46px;
 	margin: 0 4%;
 	text-align: center;
 	position: relative;
@@ -480,40 +479,42 @@ label {
 	z-index: -1;
 }
 
-a:focus,
-.pip-foot span:focus {
-	outline: 1px solid;
+a:not(.social-icon):focus,
+.pip-foot span button:focus {
+	outline: 2px solid;
 	outline-offset: -1px;
 }
 
 /* .pip-foot button {
 	border: 0px !important;
 } */
-a,
+a:not(.social-icon),
 label,
 label::before,
-.pip-foot span {
+.pip-foot span button {
 	transition: all 0.1s;
-	outline: 0.5px solid transparent;
+	outline: 2px solid transparent;
 }
 
-a:hover,
-.pip-foot span:hover,
+a:not(.social-icon):hover,
+.pip-foot span button:hover,
 a.active,
 li.active a {
 	outline: 2px solid currentColor;
+	outline-offset: -1px;
 }
-a:hover,
-.pip-foot span:hover {
+
+a:not(.social-icon):hover,
+.pip-foot span button:hover {
 	background: rgba(var(--alt), 0.25);
 }
 
 .pipboy .side-menu {
-	width: 60px;
-	position: fixed;
+	/* width: 60px; */
+	/* position: fixed; */
 }
 
-.side-menu a {
+.side-menu a:not(.social-icon) {
 	display: block;
 	width: 60px;
 	line-height: 25px;
@@ -731,6 +732,15 @@ a:hover,
 	-webkit-filter: hue-rotate(-52deg) saturate(0.9);
 	filter: hue-rotate(-52deg) saturate(0.9);
 }
+.vboy-alt {
+	height: 250px;
+	pointer-events: none;
+	background-image: url("https://media4.giphy.com/media/YqMF4AHYlGEWk/giphy.gif?cid=ecf05e474exmm19jg0hthhvs3z5mw36507adjb03g8318hyy&rid=giphy.gif&ct=g");
+	background-position: 60% center;
+	background-repeat: no-repeat;
+	-webkit-filter: hue-rotate(-52deg) saturate(0.9);
+	filter: hue-rotate(-52deg) saturate(0.9);
+}
 
 .item-icon {
 	position: absolute;
@@ -761,7 +771,7 @@ a:hover,
 
 .cursor {
 	position: absolute;
-	z-index: -1;
+	/* z-index: -1; */
 	pointer-events: none;
 }
 
@@ -770,6 +780,8 @@ a:hover,
 	display: block;
 	width: 20px;
 	height: 25px;
+	margin-left: 8px;
+	margin-top: 8px;
 	background-size: contain;
 	background-repeat: no-repeat;
 }
@@ -844,7 +856,7 @@ a:hover,
 
 @media only screen and (max-width: 800px) {
 	.frame {
-		height: 100vh;
+		height: 95vh;
 		width: 100%;
 		max-height: unset;
 		border: none;
@@ -945,7 +957,7 @@ a:hover,
 		overflow: hidden;
 		font-size: 0.85em;
 	}
-	.pip-foot a::after {
+	.pip-foot span::after {
 		bottom: 16px;
 	}
 	.cursor.cursor-active::before {
@@ -1038,13 +1050,13 @@ html.black {
 	top: 0;
 }
 
-@media only screen and (min-width: 1310px) {
+@media only screen and (min-width: 62em) {
 	.black .piece::before {
 		background-size: 1300px auto;
 	}
 }
 
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 48em) {
 	.piece::before,
 	.piece::after {
 		top: 0;
@@ -1061,5 +1073,12 @@ html.black {
 		background-size: cover;
 		width: 100%;
 		left: 0;
+	}
+
+	.stats-page {
+		display: block;
+		width: 100%;
+
+		position: relative;
 	}
 }
