--- a/src/features/ProjectDetails/ProjectDetails.scss
+++ b/src/features/ProjectDetails/ProjectDetails.scss
@@ -7,6 +7,9 @@
 	@media (max-width: 768px) {
 		box-shadow: 0 10px 30px -15px var(--navy-shadow);
 		transition: var(--transition);
+
+		display: inline-flex;
+		flex-direction: column;
 		&:hover,
 		&:focus {
 			box-shadow: 0 20px 30px -15px var(--navy-shadow);
