--- a/src/App.css
+++ b/src/App.css
@@ -854,12 +854,13 @@ a:not(.social-icon):hover,
 	}
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 62em) {
 	.frame {
-		height: 95vh;
+		height: 100vh;
 		width: 100%;
 		max-height: unset;
 		border: none;
+		border-radius: 0px;
 	}
 
 	.output {
