--- a/src/features/ProjectDetails/ProjectDetails.scss
+++ b/src/features/ProjectDetails/ProjectDetails.scss
@@ -100,7 +100,7 @@
 		border: 2px solid;
 		background-color: rgba(var(--alt), 0.3);
 
-		font-size: var(--fz-lg);
+		// font-size: var(--fz-lg);
 		@media (max-width: 768px) {
 			padding: 20px 0;
 			background-color: transparent;
