--- a/src/features/ProjectDetails/ProjectDetails.scss
+++ b/src/features/ProjectDetails/ProjectDetails.scss
@@ -33,10 +33,10 @@
 		position: relative;
 		grid-column: 1 / 7;
 		grid-row: 1 / -1;
-		@media (max-width: 1080px) {
+		@media (max-width: 62em) {
 			grid-column: 1 / 9;
 		}
-		@media (max-width: 768px) {
+		@media (max-width: 48em) {
 			display: flex;
 			flex-direction: column;
 			justify-content: center;
@@ -45,8 +45,8 @@
 			padding: 40px 40px 30px;
 			z-index: 5;
 		}
-		@media (max-width: 480px) {
-			padding: 30px 25px 20px;
+		@media (max-width: 30em) {
+			padding: 8px 2px;
 		}
 	}
 
@@ -108,6 +108,22 @@
 			&:hover {
 				box-shadow: none;
 			}
+		}
+
+		@media (max-width: 30em) {
+			max-height: 10rem;
+			overflow-y: scroll;
+			margin-top: 1rem;
+			::-webkit-scrollbar {
+				-webkit-appearance: none;
+				width: 7px;
+			}
+
+			//   ::-webkit-scrollbar-thumb {
+			// 	border-radius: 4px;
+			// 	background-color: rgba(0, 0, 0, .5);
+			// 	box-shadow: 0 0 1px rgba(255, 255, 255, .5);
+			//   }
 		}
 		a {
 			display: inline-block;
