(chore) additional tweaks to css for responsiveness

--- a/src/features/ProjectDetails/ProjectDetails.scss
+++ b/src/features/ProjectDetails/ProjectDetails.scss
@@ -110,21 +110,21 @@
 			}
 		}
 
-		@media (max-width: 30em) {
-			max-height: 10rem;
-			overflow-y: scroll;
-			margin-top: 1rem;
-			::-webkit-scrollbar {
-				-webkit-appearance: none;
-				width: 7px;
-			}
+		// @media (max-width: 30em) {
+		// 	max-height: 10rem;
+		// 	overflow-y: scroll;
+		// 	margin-top: 1rem;
+		// 	::-webkit-scrollbar {
+		// 		-webkit-appearance: none;
+		// 		width: 7px;
+		// 	}
 
-			//   ::-webkit-scrollbar-thumb {
-			// 	border-radius: 4px;
-			// 	background-color: rgba(0, 0, 0, .5);
-			// 	box-shadow: 0 0 1px rgba(255, 255, 255, .5);
-			//   }
-		}
+		// 	//   ::-webkit-scrollbar-thumb {
+		// 	// 	border-radius: 4px;
+		// 	// 	background-color: rgba(0, 0, 0, .5);
+		// 	// 	box-shadow: 0 0 1px rgba(255, 255, 255, .5);
+		// 	//   }
+		// }
 		a {
 			display: inline-block;
 			text-decoration: none;
