(chore) even more css updates for mobile

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,19 @@
 	cursor: none !important;
 }
 
+/* @media (min-width: 62em) {
+	*:hover,
+	*:focus,
+	* {
+		cursor: none;
+	}
+
+	a,
+	button {
+		cursor: none;
+	}
+} */
+
 *::-webkit-scrollbar {
 	width: 12px;
 }
