--- a/src/features/Cursor/cursor.scss
+++ b/src/features/Cursor/cursor.scss
@@ -25,3 +25,14 @@
 	// -webkit-filter: brightness(0.8);
 	// filter: brightness(0.8);
 }
+
+// @media (max-width: 62em) {
+// 	.cursor-dot,
+// 	.cursor-dot-outline {
+// 		display: none;
+// 	}
+
+// 	.cursor-dot {
+// 		display: none;
+// 	}
+// }
